<resources>
    <string name="app_name">SQLLite</string>
    <string name="home">Home</string>
    <string name="Password">Password</string>
    <string name="user_name">User Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="add">Add</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="female" />
    <string name="edit" />
    <string name="delete" />
    <string name="male" />
    <string name="gender" />
    <string name="editprofile" />
    <string name="username" />
    <string name="search" />
    <string name="dateofbirth" />
    <string name="password" />
    <string name="login" />
    <string name="register" />
    <string name="profile_management" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>